# cartoonify-plugin

./: .gitignore  444.js  444.js.map  92.js  92.js.map  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  lenna_cartoonify_plugin-0.1.1-cp38-cp38-linux_x86_64.whl  lenna_cartoonify_plugin.whl  main.js  main.js.map  package.json  remoteEntry.js  remoteEntry.js.map
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  cartoonify.cpp  cartoonify.h  cartoonify.json  cartoonify.qrc  widget.cpp  widget.h
src/: lib.rs  test.py
