[package]
name = "lenna_cartoonify_plugin"
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
version = "0.1.1"
description = "Plugin to create a cartoon style."
license = "MIT"
repository = "https://github.com/lenna-project/cartoonify-plugin"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["plugin"]
python = ["lenna_core/python", "ndarray", "ndarray-image", "numpy", "pyo3", "pythonize"]
plugin = []


[dependencies]
base64 = "0.13"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.22", default-features = false }
palette = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
libc = "0.2"
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main"}
pyo3 = { version = "0.14.1", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.3", optional = true }
ndarray-image = { git = "https://github.com/rust-cv/ndarray-image.git", optional = true }
numpy = { version = "0.14.1", optional = true }
pythonize = { version = "0.14.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[build-dependencies]
cbindgen = "0.19"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
